--- a/src/components/Message/style.css
+++ b/src/components/Message/style.css
@@ -1,55 +1,56 @@
 .box-message {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    overflow-y: hidden;
-    width: 35vw;
-    padding: 1rem;
-    border: thin solid #222;
-    background-color: #333;
-    color: #ccc;
-    z-index: 1000; /* Para asegurar que esté sobre otros elementos */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Mejora la visibilidad */
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  overflow-y: hidden;
+  width: 35vw;
+  padding: 1rem;
+  border: thin solid #222;
+  background-color: #333;
+  color: #ccc;
+  z-index: 1000; /* Para asegurar que esté sobre otros elementos */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Mejora la visibilidad */
 }
 
 .box-message h4 {
-    margin: 0 0 0.5rem 0;
+  margin: 0 0 0.5rem 0;
 }
 
 .dangerous {
-    color: rgb(223, 39, 29);
+  color: rgb(223, 39, 29);
 }
 
 .success {
-    color: rgb(20, 108, 29);
+  color: rgb(20, 108, 29);
 }
 
 .btn {
-    position: absolute;
-    right: 0.5rem; /* Ajuste a la posición correcta */
-    top: 0.5rem;
-    background: transparent;
+  position: absolute;
+  right: 0.5rem; /* Ajuste a la posición correcta */
+  top: 0.5rem;
+  background: transparent;
 }
 
 @media (max-width: 768px) {
-    .box-message {
-        width: 100vw;
-        border-radius: 0;
-    }
+  .box-message {
+    width: 100vw;
+    border-radius: 0;
+  }
 }
 
-.progress, .progress-background {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 3px;
+.progress,
+.progress-background {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
 }
-.progress{
-    transition: width 0.2s linear;
-    background-color: aliceblue;
+.progress {
+  transition: width 0.2s linear;
+  background-color: aliceblue;
 }
 
 .progress-background {
-    background-color: #222;
+  background-color: #222;
 }
