--- a/src/App.css
+++ b/src/App.css
@@ -111,7 +111,7 @@ a {
   /* Centra horizontalmente el contenido dentro de cada tarjeta */
   align-items: center;
   background-color: #eee;
-  margin: 1vw;
+  margin: 1rem;
   padding: 0.25rem;
   box-shadow: 0 0.25rem 0.3rem rgba(0, 0, 0, 0.1);
   text-align: center;
